--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "emailjs-com": "^3.2.0",
     "mdb-react-ui-kit": "^1.4.0",
